--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/cli": "^2.17.0",
     "@prisma/client": "^2.17.0",
     "apollo-server-express": "^2.21.0",
+    "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
     "reflect-metadata": "^0.1.13",
@@ -55,7 +56,7 @@
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "4.1.5"
   },
   "jest": {
     "moduleFileExtensions": [
